Revision history for Number::Phone::CountryCode.

CURRENT
    - Add support for: Cocos (Keeling) Islands (CC), Congo (CG),
      Cook Islands (CK), Cuba (CU), Dominica (DM), Spain (ES), Georgia (GE),
      Guinea (GN), Guam (GU), Guyana (GY)

0.02  Sat Feb 20 2009
    - Makefile.PL: only require version 5.008
    - add support for: India (IN), China (CN), Chad (TD)
    - correct several phone codes

0.01  Fri Feb 20 2009
    - original version