@@ -118,6 +118,7 @@ my %Codes = (
     IN => [ '91',   '00',    '0'],     # India
     IQ => ['964',   '00',    '0'],     # Iraq
     IR => [ '98',   '00',    '0'],     # Iran, Islamic Republic of
+    IS => ['354',   '00',    '0'],     # Iceland
     IT => [ '39',   '00',  undef],     # Italy
     JM => [  '1',  '011',    '1'],     # Jamaica
     JO => ['962',   '00',    '0'],     # Jordan
@@ -146,9 +147,11 @@ my %Codes = (
     MA => ['212',   '00',  undef],     # Morocco
     MC => ['377',   '00',    '0'],     # Monaco
     MD => ['373',   '00',    '0'],     # Moldova, Republic of
+    ME => ['382',   '99',    '0'],     # Montenegro
     MG => ['261',   '00',    '0'],     # Madagascar
     MH => ['692',  '011',    '1'],     # Marshall Islands
     MK => ['389',   '00',    '0'],     # Macedonia, the Former Yugoslav Republic of
+    ML => ['223',   '00',    '0'],     # Mali
     MN => ['976',  '001',    '0'],     # Mongolia
     MO => ['853',   '00',    '0'],     # Macao
     MP => [  '1',  '011',    '1'],     # Northern Mariana Islands
