@@ -3,7 +3,8 @@ Revision history for Number::Phone::CountryCode.
 CURRENT
     - Add support for: Cocos (Keeling) Islands (CC), Congo (CG),
       Cook Islands (CK), Cuba (CU), Dominica (DM), Spain (ES), Georgia (GE),
-      Guinea (GN), Guam (GU), Guyana (GY)
+      Guinea (GN), Guam (GU), Guyana (GY), Iceland (IS), Montenegro (ME),
+      Mali (ML)
 
 0.02  Sat Feb 20 2009
     - Makefile.PL: only require version 5.008
